--- a/portfolio.html
+++ b/portfolio.html
@@ -7,8 +7,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&family=Roboto:wght@400;500;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./css/normalize.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/main.min.css">
     <title>Document</title>
 </head>
 
@@ -264,8 +263,8 @@
     <footer>
         <div class="content">
             <div class="logo-addres">
-                <a class="logo-link list" href="#">
-                    <span>Web</span>Studio
+                <a class="logo-link footer-logo list" href="#">
+                    <span>Web</span><span class="footer">Studio</span>
                 </a>
                 <address>
                     <ul class="contacts">
