--- a/portfolio.html
+++ b/portfolio.html
@@ -4,10 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/main.min.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&family=Roboto:wght@400;500;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./css/main.min.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+        rel="stylesheet">
     <title>Document</title>
 </head>
 
@@ -15,8 +19,8 @@
     <header>
         <div class="header-box-p">
             <nav class="menu">
-                <a class="logo link" href="#">
-                    <img src="./images/WebStudio.svg" alt="логотип">
+                <a class="logo-link list" href="#">
+                    <span>Web</span><span class="header">Studio</span>
                 </a>
                 <ul class="nav-list list">
                     <li class="item"><a class="nav-item list" href="./index.html">Студия</a></li>
